--- a/package.json
+++ b/package.json
@@ -34,5 +34,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "install": "^0.13.0",
+    "npm": "^10.5.1",
+    "react-icons": "^5.0.1",
+    "tailwindcss": "^3.4.3"
   }
 }
